--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,6 +42,7 @@ nav:
       - 'Отчёты':
         - 'Репорт от 15.06.2025': lore/reports/2025_06_15.md
         - 'Репорт от 18.06.2025': lore/reports/2025_06_18.md
+        - 'Репорт от 21.06.2025': lore/reports/2025_06_21.md
       - 'Мемы и символы': lore/memes.md
       - 'Творчество нуллианцев': lore/creativity.md
   - '🚀 Как помочь?':
