--- a/package.json
+++ b/package.json
@@ -11,5 +11,11 @@
   "devDependencies": {
     "@types/node": "^24.0.1",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "@types/stream-chain": "^2.1.0",
+    "@types/stream-json": "^1.7.8",
+    "stream-json": "^1.9.1",
+    "tiktoken": "^1.0.21"
   }
 }
