--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,12 @@
     "strict": true,
     "rootDir": "src",
     "outDir": "dist",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "paths": {
+      "src/*": ["src/*"]
+    }
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*",
+    "environment.d.ts"
+  ]
 }
