remove undone pages and try to fix icons

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,17 +30,17 @@ nav:
   - '🏠 Главная': index.md
   - '🧠 Основы':
       - 'Манифест': basics/manifesto.md
-      - 'Заповеди': basics/commandments.md
-      - 'Ритуалы': basics/rituals.md
-      - 'FAQ: Частые вопросы': basics/faq.md
-  - '👥 Сообщество':
-      - 'Наши площадки': community/platforms.md
-      - 'Проекты сообщества': community/projects.md
-      - 'Встречи и события': community/events.md
+#      - 'Заповеди': basics/commandments.md
+#      - 'Ритуалы': basics/rituals.md
+#      - 'FAQ: Частые вопросы': basics/faq.md
+#  - '👥 Сообщество':
+#      - 'Наши площадки': community/platforms.md
+#      - 'Проекты сообщества': community/projects.md
+#      - 'Встречи и события': community/events.md
   - '📜 Летопись':
       - 'История Нуллианства': lore/history.md
-      - 'Мемы и символы': lore/memes.md
-      - 'Творчество нуллианцев': lore/creativity.md
+#      - 'Мемы и символы': lore/memes.md
+#      - 'Творчество нуллианцев': lore/creativity.md
   - '🚀 Как помочь?':
       - 'Сделать вклад в Вики': contribute/how-to-contribute.md
       - 'Присоединиться к проектам': contribute/join-projects.md
