--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "run": "mkdocs serve",
     "build": "npx tdl-install-types && tsc",
+    "extract_topics": "python3 src/extract_topics.py",
     "report": "npx ts-node src/report.ts",
     "report-thread": "npx ts-node src/report-thread.ts",
     "export-thread": "npx ts-node src/export-thread.ts",
