--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "report-thread": "npx ts-node src/report-thread.ts",
     "export-thread": "npx ts-node src/export-thread.ts",
     "export-chat": "npx ts-node src/export-chat.ts",
-    "analize": "npx ts-node src/analize.ts"
+    "analize": "npx ts-node src/analize.ts",
+    "add-lore": "npx ts-node src/add-lore.ts"
   },
   "devDependencies": {
     "@types/node": "^24.0.4",
